--- a/project.ipynb
+++ b/project.ipynb
@@ -9,6 +9,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Simply display the contents of the webcam with optional mirroring using OpenCV \n",
+    "via the new Pythonic cv2 interface.  Press <esc> to quit.\n",
+    "\"\"\"\n",
+    "\n",
+    "import cv2\n",
+    "\n",
+    "\n",
+    "def show_webcam(mirror=False):\n",
+    "    cam = cv2.VideoCapture(0)\n",
+    "    while True:\n",
+    "        ret_val, img = cam.read()\n",
+    "        if mirror: \n",
+    "            img = cv2.flip(img, 1)\n",
+    "        cv2.imshow('my webcam', img)\n",
+    "        if cv2.waitKey(1) == 27: \n",
+    "            break  # esc to quit\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    show_webcam(mirror=True)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -17,21 +51,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
