--- a/project.ipynb
+++ b/project.ipynb
@@ -9,9 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n",
+      "(720, 1280)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Simply display the contents of the webcam with optional mirroring using OpenCV \n",
@@ -19,15 +39,23 @@
     "\"\"\"\n",
     "\n",
     "import cv2\n",
+    "import numpy as np\n",
     "\n",
+    "\n",
+    "def rgb2gray(rgb):\n",
+    "    return np.dot(rgb[...,:3], [0.299, 0.587, 0.114])\n",
     "\n",
     "def show_webcam(mirror=False):\n",
     "    cam = cv2.VideoCapture(0)\n",
+    "    l = np.zeros(10)\n",
     "    while True:\n",
+    "        #ret_val is a boolan statement indicating that the value has been returned\n",
     "        ret_val, img = cam.read()\n",
     "        if mirror: \n",
     "            img = cv2.flip(img, 1)\n",
-    "        cv2.imshow('my webcam', img)\n",
+    "        #print(np.array(rgb2gray(img)).shape)\n",
+    "        #cv2.imshow('my webcam', rgb2gray(img))\n",
+    "        print cv2.waitKey(1)\n",
     "        if cv2.waitKey(1) == 27: \n",
     "            break  # esc to quit\n",
     "    cv2.destroyAllWindows()\n",
