--- a/src/changes.txt
+++ b/src/changes.txt
@@ -1,8 +1,8 @@
 The purpose of changing the letter was to make it easier for the neural network to distinguish between the same or extremely similar hand poses. 
 The data can be recreated using webcam.py and changing some parameters if one chooses to do so  
 
-D - too similar to 6, changed to sideways "f", similar shape to character "d"
-E - too similar to A, changed to similar shape as character "e"
+D - too similar to 6, changed to sideways "f", similar to "d", 3 fingers pointed up, 2 as a circle
+E - too similar to A, changed to be similar to "e"
 J - requires to movement, change to L with two fingers and curved thumb
 M - too similar to A, changed to sideways 6
 N - too similar to A, changed to sideways 2
@@ -12,5 +12,4 @@ T - Gun
 V - Gun with 2 fingers
 W - Gun with 3 fingers 
 Z - Zot Sideways
-
 
